# catan-rf

./: .gitignore  MULTI_AGENT_TRAINING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  TESTING_REPORT.md  UV_SETUP.md  cards  pyproject.toml  requirements.txt  run.py  setup.py  setup.sh  test_training_e2e.py  test_training_minimal.py  tiles  train_agents.py  training_system.py
archive/: debug_enhanced_agent.py  debug_main_game.py  debug_rl_state.py  debug_settlement_building.py  test_enhanced_agent.py
assets/: README.md
catan_rl/: __init__.py
catan_rl/agents/: __init__.py  base_rl_agent.py  dqn_agent.py  langgraph_llm_agent.py  legacy_qtable_agent.py  random_agent.py  rllib_ppo_agent.py  torchrl_sac_agent.py
catan_rl/agents/algorithms/: __init__.py  dqn.py
catan_rl/agents/memory/: __init__.py  replay_buffer.py
catan_rl/agents/networks/: __init__.py  base.py  conv_network.py  hybrid_network.py  mlp_network.py
catan_rl/core/: __init__.py
catan_rl/core/game/agents/: __init__.py  random_agent.py  rl_agent.py
catan_rl/core/game/engine/: __init__.py  game_state.py  rules.py  types.py
catan_rl/core/game/env/: __init__.py  catan_env.py  specs.py
catan_rl/core/game/utils/: __init__.py  repro.py
catan_rl/core/game/web/: __init__.py  server.py
catan_rl/core/integration/: __init__.py  dqn_bridge.py
catan_rl/environments/: __init__.py  action_space.py
catan_rl/environments/state_encoders/: __init__.py  base.py  feature_encoder.py  spatial_encoder.py
catan_rl/evaluation/: __init__.py  evaluator.py
catan_rl/experiments/: __init__.py  agent.py  experiment.py
docs/: ARCHITECTURE.md  DQN_Architecture_Plan.md  DQN_FRAMEWORK.md  README.md  RL_Framework_Plan.md  RL_Training_Guide.md  ROADMAP.md  RULES.md
evaluation_results/comparison_report/: results.json  summary.txt
examples/: __init__.py  run_dqn_experiment.py
experiments/baseline/: config.json  results.json
experiments/results/test_framework_001/: config.json  summary_report.json
models/: rl_agent_p0_dqn.agent.json  rl_agent_p0_dqn.dqn.pth
scripts/: __init__.py  analyze_games.py  analyze_losses.py  demo_integration.py  evaluate_dqn_agents.py  play_cli.py  run_experiment.py  simple_bot_match.py  train_dqn_agents.py  train_fast.py  train_rl_bots.py
src/catan/: __init__.py
src/catan/engine/: board.py  game_state.py  rules.py  types.py
src/catan/env/: catan_env.py
src/catan/rl/: __init__.py
src/catan/web/: server.py
tests/: test_board.py  test_dev_cards.py  test_rules.py
(+4 files in other folders)
